- Support of realtime upload, modification & removal of a single QSO to/from ClubLog.org.
- Updated the DB with the PROP_MODE options.
- Improved the way KLog manages & shows the bands & modes.
- GUI: Added a Propagation Mode Combobox.
- GUI: Prop_Mode combobox automatically goes to SAT if sat name or sat mode are defined.
- GUI: Added a Find DX-QSL requested option.
- Added an auto complete option to auto-complete info (QTH, Locator, Name, QSL Manager & IOTA) from previously worked QSO.
- Some minor performance improvements.

April-2015 - 0.9.1.1
- Bugfix: Editing a QSO with satellite data was not properly done and caused some errors.

April-2015 - 0.9.1
- Bugfix: Fixed DataBase::getBandIdFromFreq it was not ansswering properly.
- Now checks if band & frequency are coherent before adding a QSO. Band wins.
- All Satellite QSO include the PROP_MODE ADIF tag to make it compatible with LOTW.
- Improved the DXMarathon code.
- GUI: Added basic Satellite support.
- GUI: It is possible to mark a QSL sent via bureau/direct & DX QSL as requested with one action from Search box.
- GUI: KLog request a valid QRZ and at least one first logtype to start using it.
- KLog supports the management of several logs, being possible to edit, remove and select the one to use.

January-2015 - 0.9.0.3
- Bugfix: ADIF was not properly imported when Fields where using the Type of data optional field preventing logs from Logger32 being imported. (TNX EB1TR)
- Bugfix: QSL Sent/Received status in the search box were switched.
- Bugfix: CTY.CSV was not updated if the file was already existing.
- Bugfix: Entity DB was not updated when CTY.CSV was updated.
- Bugfix: Search results showed the default Station Callsign if non was in the QSO. This lead to errors if QRZ was not the default.
- KLog recognizes now .ADIF files (instead of only .ADI).
- KLog shows now the WAZ status.
- Added a very basic support of DX Marathon (http://www.dxmarathon.com/).
- DXCluster filters are now working.